--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <link rel="Stylesheet" href= "Styles/Estilos.css">
 <meta charset="utf-8">
 </Head>
-<Body background="img20.jpg">
 <FONT COLOR="BLACK">
 <FONT SIZE="5">
 <font face="Malgun Gothic">
@@ -18,7 +17,7 @@
 </section>
 
 <section id="lateral1">
-<center><img src="IMG_2070.jpg" width="350" height="250"></center>
+<center><img src="images/IMG_2070.jpg" width="350" height="250"></center>
 
 </section>
 
