--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </section>
 
 <section id="lateral1">
-<center><img src="images/IMG_2070.jpg" width="350" height="250"></center>
+<center><img src="images/IMG_2070.JPG" width="350" height="250"></center>
 
 </section>
 
